--- a/src/app/secondary-components/books/books.component.html
+++ b/src/app/secondary-components/books/books.component.html
@@ -1,4 +1,5 @@
-<div class="book-app-container">
+<div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto;">
+    <app-navbar></app-navbar>
 
     <main class="top-section">
         <header class="header">
