feat: update Read More link to direct to user review for each book

--- a/src/app/secondary-components/books/books.component.html
+++ b/src/app/secondary-components/books/books.component.html
@@ -64,7 +64,7 @@
                             </div>
                             <h4 class="book-title">{{ book.title }}</h4>
                             <p class="book-author">{{ book.author }}</p>
-                            <a href="#" class="read-more">Read More</a>
+                            <a [href]="book.user_review" class="read-more">Read More</a>
                         </div>
                     </div>
                 </div>
