--- a/src/app/secondary-components/books/books.component.html
+++ b/src/app/secondary-components/books/books.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" style="min-height: -webkit-fill-available; overflow-y: auto; padding: 0 1rem;">
+    <ngx-ui-loader></ngx-ui-loader>
     <app-navbar></app-navbar>
 
     <main class="top-section mt-5">
