feat: adjust font sizes for logo and reading info for better readability

--- a/src/app/secondary-components/books/books.component.html
+++ b/src/app/secondary-components/books/books.component.html
@@ -5,14 +5,14 @@
     <main class="top-section mt-5">
         <header class="header">
             <h1 class="logo">BOOKS</h1>
-            <nav class="tabs">
+            <!-- <nav class="tabs">
                 <button class="tab" [class.active]="activeTab === 'books'" (click)="setActiveTab('books')">
                     <span class="icon">📖</span> Books
                 </button>
                 <button class="tab" [class.active]="activeTab === 'audiobooks'" (click)="setActiveTab('audiobooks')">
                     <span class="icon">🎧</span> AudioBooks
                 </button>
-            </nav>
+            </nav> -->
         </header>
 
         <!-- Current Reading Section -->
