--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="d-flex justify-content-center mt-5">
             <h1 id="title_name">Lucas Brito</h1> <!-- Descriptive heading with keywords -->
         </div>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center sub_title">
             <h2 translate id="sub_title">home.sub_title</h2> <!-- Descriptive heading -->
         </div>
         <hr>
