--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <h1 id="title_name">Lucas Brito</h1> <!-- Descriptive heading with keywords -->
         </div>
         <div class="d-flex justify-content-center sub_title">
-            <h2 translate id="sub_title">home.sub_title</h2> <!-- Descriptive heading -->
+            <h2 id="sub_title"></h2>
         </div>
         <hr>
         <!-- About section -->
